Fixed dark mode for footer elements.

--- a/css/dark-theme.scss
+++ b/css/dark-theme.scss
@@ -16,3 +16,6 @@ $link-col: rgb(86, 187, 255);
 $underline-color: hsl(0, 0, 60%);
 $box-background-color: hsl(0, 0, 95%);
 $highlight-color: hsl(0, 0, 60%);
+
+$footer-circle-color: $main-text-color;
+$footer-icon-color: $main-background-color;
