--- a/css/light-theme.scss
+++ b/css/light-theme.scss
@@ -16,3 +16,6 @@ $link-col: rgb(0, 90, 255);
 $underline-color: hsl(0, 0, 60%);
 $box-background-color: hsl(0, 0, 95%);
 $highlight-color: hsl(0, 0, 60%);
+
+$footer-circle-color: #221144;
+$footer-icon-color: hsl(0, 0, 100%);
