--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,9 @@ $underline-color: hsl(0, 0, 60%);
 $box-background-color: hsl(0, 0, 95%);
 $highlight-color: hsl(0, 0, 60%);
 
+$footer-circle-color: $main-text-color;
+$footer-icon-color: $main-background-color;
+
 /* --- General --- */
 
 body {
@@ -299,8 +302,24 @@ footer p.text-muted {
   color: $lighter-text-color;
 }
 
-footer a {
-  color: {{site.footer-link-col}};
+footer a 
+{
+  color: $footer-circle-color;
+
+  .fa-circle
+  {
+    color: $footer-circle-color;
+  }
+
+  .fab
+  {
+    color: $footer-icon-color;
+  }
+
+  .fab:hover
+  {
+    color: $link-col;
+  }
 }
 
 footer .list-inline {
